--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -28,21 +28,15 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <li class="pokemon">
-                <span class="number">#001</span>
-                <span class="name">Bulbasaur</span>
-
-                <div class="detail">
-                    <ol class="types">
-                        <li class="type">grass</li>
-                        <li class="type">poison</li>
-                    </ol>
-
-                    <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/001.png"
-                        alt="Bulbasaur">
-                </div>
-            </li>
+            
         </ol>
+
+        <div class="pagination">
+        <button id="loadMoreButton" type="button">
+            Load More
+        </button>
+        </div>
+
     </section>
 
     <!-- Main Js -->
